web/stylesheets/dialog.css
.dialog {
    background-color: var(--complement-color);
    border: 1px solid white;
    display: flex;
    flex-direction: column;
    position: fixed;
    width: 420px;
    z-index: 1;
}

.dialogHeader {
    background-color: var(--base-color);
    display: flex;
    height: 32px;
    width: 100%;
}

.dialogHeader > img {
    display: flex;
    height: 16px;
    padding: 8px;
    width: 16px;
}

.dialogHeader > div {
    align-items: center;
    display: flex;
    height: 32px;
    justify-content: center;
    width: 100%;
}

.dialogHeader > button {
    align-items: center;
    background-color: red;
    border: 1px solid black;
    color: black;
    cursor: pointer;
    display: flex;
    font-size: larger;
    font-weight: bold;
    height: 32px;
    justify-content: center;
    width: 32px;
}

.dialogHeader > button:hover {
    color: white;
}

.dialogContainer {
    color: inherit;
    display: flex;
    flex-direction: column;
    gap: 1px;
    height: 100%;
    padding: 10px;
}

.dialogContainer > #toolButtons {
    display: flex;
}

.dialogContainer > #aboutName {
    display: flex;
    font-weight: bold;
    justify-content: center;
}

.dialogContainer > #aboutDetails {
    margin: 0;
}

.dialogContainer > #aboutThanks {
    display: flex;
    justify-content: center;
    text-decoration: underline;
}

.dialogContainer > #aboutCredits {
    border: 1px solid black;
    display: flex;
    font-weight: bold;
    height: 5em;
    justify-content: center;
    margin: 5px 0;
    overflow: scroll;
    overflow-x: hidden;
    text-align: center;
}

.dialogScrollView {
    border: 1px solid black;
    display: flex;
    flex-direction: column;
    height: 20em;
    overflow: scroll;
    overflow-x: hidden;
    padding: 1px;
}

.dialogButton {
    align-items: center;
    background-image: linear-gradient(to bottom, var(--complement-color), var(--base-color));
    border: 1px solid black;
    border-radius: 5px;
    color: inherit;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: 10px;
}

.dialogButton:hover {
    border-color: blue;
    filter: brightness(110%);
}

.dialogSpacer {
    display: flex;
    width: 100%;
}

.dialogFooter {
    align-items: center;
    display: flex;
}

.dialogFooter > div {
    display: flex;
    width: 100%;
}

@media screen and (min-width: 768px) {
    .dialog {
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
    }
}

